--- a/my-app/src/components/navbar/navbar.css
+++ b/my-app/src/components/navbar/navbar.css
@@ -5,7 +5,7 @@ body {
   /* background-color: #141414; */
   margin: 0;
   padding: 0;
-  background-color: #8c7e7e;
+  background-color: #403A3A;
 }
 
 .nav {
@@ -14,7 +14,7 @@ body {
   padding-left: 2rem;
   display: flex;
   align-content: center;
-  width: 100%;
+  /* width: 100%; */
 }
 
 #nav1{
