--- a/src/sharing/Signin.css
+++ b/src/sharing/Signin.css
@@ -1,220 +1,162 @@
-
-.signin_container {
-  position:relative;
-  display: flex;
-  width: 100%;
-  height: 100%;
+.community {
+  color: #78fff7;
 }
-.signin_body {
-  overflow:scroll;
+.join-our-community-container {
   margin: 0;
-  font-family: "Baloo Bhai 2", sans-serif;
-}
-.signin_wrapper {
-  width: 29.5625rem;
-  position: absolute;
-  margin: 0 auto;
-  max-width: 29.5625rem; /* for large screen */
-  right: 3%;
-  left: 60%;
-  margin-top: 4.999rem;
-  height: 29.125rem;
-  mix-blend-mode: lighten;
-}
-
-.signin_images {
-  margin-top: 15.94rem;
-}
-
-.signin_logo {
-  position: absolute;
-  width: 5.18rem;
-  mix-blend-mode: lighten;
-  margin-left: 1em;
-}
-.signin_msg {
-  position: absolute;
-  margin-top: 5%;
-  margin-left: 10%;
-  color: rgba(210, 20, 220, 0.451);
-  font-size: 4rem;
-  font-style: normal;
+  position: relative;
+  font-size: inherit;
+  line-height: 2.813rem;
   font-weight: 700;
-  line-height: 1.875rem;
-  mix-blend-mode: lighten;
+  font-family: inherit;
+  flex-shrink: 0;
+  
 }
-
-
-.signin_tagline {
+.logo-1-icon {
   position: absolute;
-  font-size: 2.5rem;
-  margin-top: 8%;
+  top: 0;
+  left: 0.563rem;
+  width: 10.488rem;
+  height: 13.25rem;
+  object-fit: cover;
+}
+.icon-settings,
+.icon-settings1 {
+  position: absolute;
+  top: 11.7rem;
+  left: 11.313rem;
+  width: 18.875rem;
+  height: 17.425rem;
+  object-fit: contain;
+  z-index: 1;
+}
+.icon-settings1 {
+  top: 18.75rem;
+  left: -2.75rem;
+  width: 18.838rem;
+  height: 17.294rem;
+  z-index: 2;
+}
+.logo-1-parent {
+  height: 42.044rem;
+  width: 37.188rem;
+  position: absolute;
+  margin: 0 !important;
+  bottom: -34.612rem;
+  left: -11.05rem;
+}
+.join-our-community-parent {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: relative;
+}
+.unlock {
   color: #ebbae3;
-  margin-left: 10%;
-  mix-blend-mode: lighten;
 }
-
-
-.signin_im1 {
-  width: 17.145rem;
-  height: 16.56506rem;
-  transform: rotate(-837.424deg);
-  position: absolute;
-  margin-top: 16.4rem;
-  left: 11.8rem;
-  border: 4.74rem;
-  mix-blend-mode: lighten;
+.coding {
+  color: #a1fff9;
 }
-
-.signin_im2 {
-  top: 484%;
-  position: absolute;
-  margin-top: 23rem;
-  border: 4.64rem;
-  width: 14.24744rem;
-  height: 15.84081rem;
-  transform: rotate(-0.335deg);
-  mix-blend-mode: lighten;
-  left: -0.5%;
+.potentials {
+  color: #a57dfc;
 }
-
-
-.signin_title {
-  color: #78fff7;
-  text-align: center;
-  font-family: "Baloo Bhai 2";
-  font-size: 3rem;
-  font-weight: 700;
-  line-height: 62.5%;
-}
-.signin_form {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.signin_icon1 {
-  width: 25px;
-  height: 25px;
-  flex-shrink: 0;
-  fill: #78fff7;
-  margin-right: 1rem;
-  margin-left: 1.06rem;
-  margin-top: 9.1px;
-  margin-bottom: 15.1px;
-  mix-blend-mode: lighten;
-}
-
-.signin_input-box,
-.input-box {
-  border-radius: 0.6875rem;
-  border: 1px solid #78fff7;
-  background: #141a23;
-  display: flex;
-  align-items: center;
-  margin-bottom: 1rem;
-  width: 29.5625rem;
-
-  height: 4.1875rem;
-  flex-shrink: 0;
-}
-.signin_input-box2,
-.input-box2 {
-  border-radius: 0.6875rem;
-  border: 1px solid #78fff7;
-  background: #141a23;
-  display: flex;
-  align-items: center;
-  margin-bottom: 1rem;
-  width: 29.5625rem;
-
-  height: 4.1875rem;
-  flex-shrink: 0;
-}
-.signin_icon2 {
-  width: 25px;
-  height: 25px;
-  flex-shrink: 0;
-  fill: #78fff7;
-  margin-right: 1rem;
-  margin-left: 1.06rem;
-  margin-top: 9.1px;
-  margin-bottom: 15.1px;
-  mix-blend-mode: lighten;
-}
-
-.signin_input-box input,
-.signin_input-box2 input {
-  width: calc(100% - 2rem);
-  padding: 1.5rem;
-  border: none;
-  font-size: 1.25rem;
-  background: none;
-  color: #78fff7;
-  outline: none;
-}
-
-.signin_role-checkboxes {
-  color: white;
-  mix-blend-mode: luminosity;
-  border: #78fff7 4rem;
-  display: flex;
-  margin-bottom: 0.5rem;
-  text-align: center;
-  font-family: "Baloo Bhai 2";
-  font-size: 1.25rem;
-  font-style: normal;
+.unlock-your-coding-container {
+  margin: 0;
+  position: relative;
+  font-size: inherit;
+  line-height: 1.388rem;
   font-weight: 400;
-  line-height: 150%;
-}
-input[type="checkbox"] {
-  margin-right: 1.5rem;
-  width: 1.6875rem;
-}
-input[type="checkbox" i] {
-  margin: 3px 2px 3px 4px;
-}
-.signin_cl {
-  margin: 20px 55px 9px 10px;
-}
-
-.signin_button {
-  width: 9.25rem;
-  height: 2.9375rem;
+  font-family: inherit;
   flex-shrink: 0;
-  padding: 0.5rem;
-  background-color: #78fff7;
-  border: 1px solid #0d1117;
-  border-radius: 0.4375rem;
-  cursor: pointer;
-  outline: none;
-  color: #0d1117;
-  text-align: center;
+  
+}
+.unlock-your-coding-potentials-wrapper {
+  flex-direction: row;
+  padding: 0 0.063rem;
+  box-sizing: border-box;
+  max-width: 100%;
+  font-size: 2.5rem;
   font-family: "Baloo Bhai 2";
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 30px; /* 150% */
 }
-
-.signin_register-link {
-  width: fit-content;
-  text-align: center;
-  margin-top: 5%;
-  color: #f3180a;
+.signin-35,
+.signin-35-inner,
+.frame-parent,
+.unlock-your-coding-potentials-wrapper {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
-
-.signin_register-link a {
-  color: #007bff;
-  text-decoration: none;
-  font-weight: bold;
+.frame-parent {
+  flex-direction: column;
+  gap: 1.063rem;
+  max-width: 100%;
 }
-
-.signin_register-link a:hover {
-  text-decoration: underline;
+.signin-35,
+.signin-35-inner {
+  box-sizing: border-box;
 }
-/* ----------------------------------------------------------Respnsiveness mobile-----------------------------------------------------------------*/
-@media only screen and (max-width: 550px) {
+.signin-35-inner {
+  width: 29.563rem;
+  flex-direction: column;
+  padding: 7.231rem 0 0;
+  min-width: 29.563rem;
+  max-width: 100%;
+}
+.signin-35 {
+  position: relative;
+  
+  width: 100%;
+  overflow: hidden;
+  flex-direction: row;
+  padding: 3.706rem 7.125rem 12.938rem 11.05rem;
+  gap: 4.875rem;
+  mix-blend-mode: normal;
+  letter-spacing: normal;
+  text-align: left;
+  font-size: 4rem;
+  color: #fff;
+  font-family: Roboto;
+}
+@media screen and (max-width: 1350px) {
+  .signin-35-inner {
+    flex: 1;
+  }
+  .signin-35 {
+    flex-wrap: wrap;
+  }
+}
+@media screen and (max-width: 800px) {
+  .join-our-community-container {
+    font-size: 3.188rem;
+  }
+  .unlock-your-coding-container {
+    font-size: 2rem;
+    line-height: 1.5rem;
+  }
+  .signin-35-inner {
+    padding-top: 4.688rem;
+    box-sizing: border-box;
+    min-width: 100%;
+  }
+  .signin-35 {
+    gap: 4.875rem 2.438rem;
+    padding-left: 5.5rem;
+    padding-right: 3.563rem;
+    box-sizing: border-box;
+  }
+}
+@media screen and (max-width: 450px) {
+  .join-our-community-container {
+    font-size: 2.375rem;
+  }
+  .unlock-your-coding-container {
+    font-size: 1.5rem;
+    line-height: 1.125rem;
+  }
+  .signin-35 {
+    gap: 4.875rem 1.188rem;
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+    box-sizing: border-box;
+  }
 }
