--- a/src/sharing/footer.css
+++ b/src/sharing/footer.css
@@ -1,9 +1,4 @@
-/**********************************************Footer********************************************************/
-
-.footer_footer-start {
-    margin-top: 41.9rem;
-      }
-  .footer_page-footer {
+.footer_page-footer {
     background: linear-gradient(
       to right,
       transparent 0%,
@@ -13,6 +8,7 @@
    
     padding-top: 30px;
     padding-bottom: 30px;
+    margin-top: 2rem;
     width: 100%;
   
   }
@@ -105,7 +101,7 @@
     height: 1.9rem;
   }
   .footer_footer-bottom {
-    font-family: baloo bhai2 sans-serif;
+    font-family: "baloo bhai 2" ;
   }
   .footer_bottom {
     color: #f2e2e2;
@@ -126,7 +122,7 @@
     );
     color: #fffbfb;
     text-align: center;
-    font-family: baloo bhai 2; /* Arial, Helvetica, sans-serif; */
+    font-family: "baloo bhai 2";
     font-size: 1.3rem;
     font-style: normal;
     font-weight: 300;
