--- a/src/components/navbar/home.css
+++ b/src/components/navbar/home.css
@@ -1,22 +1,22 @@
 /* padding:t,r,b,l */
-.AddMemBtn{
+.AddMemBtn {
   background-color: #5a19ca;
-position: fixed;
-display: flex;
-align-items: center;
-justify-content : center;
-z-index: 99;
-right: 3%;
-margin-right: 5%;
-border-radius: 50%;
-bottom: 5%;
-width: 80px;
-height: 85px;
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 99;
+  right: 3%;
+  margin-right: 5%;
+  border-radius: 50%;
+  bottom: 5%;
+  width: 80px;
+  height: 85px;
 }
-.AddMemBtn p{
+.AddMemBtn p {
   margin-top: 40px;
-color: #fff;
-font-size: 50px;
+  color: #fff;
+  font-size: 50px;
 }
 .triangle-up {
   height: 31rem;
@@ -57,14 +57,15 @@ font-size: 50px;
 }
 .home_body {
   display: grid;
-  width: 90%;
-  margin: 0 10% 0 10%;
+  width: 100%;
+  margin: 0 10% 0 7%;
   /* background-color: #e20606; */
   grid-template-columns: auto auto;
-  gap: 1rem;
+  /* row-gap: 10rem; */
 }
 .home_grid1 {
   grid-row: 1;
+  margin-right: 5rem;
 }
 .home_grid2 {
   grid-row: 1/2;
@@ -79,22 +80,28 @@ font-size: 50px;
 .home_grid4 {
   grid-row: 2/2;
   justify-self: start;
-  background-color: #fff ;
+  background-color: #fff;
+}
+.home_grid5 {
+  grid-row: 3/3;
 }
 
 .home_h1 {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  align-items: center;
 }
 .home_h1 h1 {
   color: #fff;
   height: 1rem;
 
   font-family: Tiro Devanagari Sanskrit;
+  /* font-family: Inter variant0; */
+  /* font-family: Inter ; */
   font-size: 4.5rem;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 500;
   line-height: 59.496px; /* 86.227% */
 }
 .home_h1 span {
@@ -103,6 +110,7 @@ font-size: 50px;
 .home_para {
   display: flex;
   flex-wrap: wrap;
+  text-align: center;
 }
 .home_para p {
   color: #fff;
@@ -119,54 +127,125 @@ font-size: 50px;
   height: fit-content;
 }
 .home_logo img {
-  width: 35rem;
-  height: 42rem;
+  width: 26rem;
+  height: 35rem;
+  margin: 0 8rem 0 0;
 }
 
-.home_JoinUs {
-  width: 34rem;
-}
 .home_JoinUs h1 {
   color: #fff;
-  font-family: Arial;
+  font-family: Tiro Devanagari Sanskrit;
   font-size: 54px;
   font-style: normal;
+  text-align: center;
   font-weight: 700;
   line-height: 30px; /* 55.556% */
 }
 .home_JoinUs h1 span {
-  color: #1300ea;
+  text-align: center;
+  color: #05f8e0;
 }
 .home_JoinUs p {
   color: #fff;
-  font-family: Baloo Bhai 2;
+  text-align: center;
+  font-family: Tiro Devanagari Sanskrit;
   font-size: 2.5rem;
   font-style: normal;
   font-weight: 400;
   line-height: 4.175px;
 }
-.home_JoinUs button {
-  width: 15rem;
-  height: 4.5rem;
-  flex-shrink: 0;
-  border-radius: 1.5rem;
-  background: linear-gradient(
-    90deg,
-    #e7561e 1.82%,
-    #de4c8e 39.12%,
-    #de4c8e 64.72%,
-    #5c46e4 93.86%
-  );
-  color: #fffbfb;
-  text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 2.6rem;
-  font-style: normal;
-  font-weight: 700;
-  border: none;
+.home_JoinUs_btn {
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ width: 100%;
 }
 
 
+
+
+.wrap {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button {
+  min-width: 200px;
+  min-height: 60px;
+  font-family: 'Nunito', sans-serif;
+  font-size: 22px;
+  text-transform: uppercase;
+  letter-spacing: 1.3px;
+  font-weight: 700;
+  color: #313133;
+  background: #4FD1C5;
+background: linear-gradient(90deg, rgb(65, 76, 204) 0%, rgb(79, 207, 209) 100%);
+  border: none;
+  border-radius: 0.5rem;
+  box-shadow: 4px 3px 24px rgb(109, 117, 211);
+  transition: all 0.3s ease-in-out 0s;
+  cursor: pointer;
+  outline: none;
+  position: relative;
+  padding: 10px;
+  }
+
+.button::before {
+content: '';
+  border-radius: 0.5rem;
+  min-width: calc(200px + 12px);
+  min-height: calc(60px + 12px);
+  border: 6px solid rgb(65, 76, 204);
+  box-shadow: 0 0 60px rgb(109, 117, 211);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: all .3s ease-in-out 0s;
+}
+
+.button:hover, .button:focus {
+  color: #313133;
+  transform: translateY(-6px);
+}
+
+.button:hover::before, .button:focus::before {
+  opacity: 1;
+}
+
+.button::after {
+  content: '';
+  width: 30px; height: 30px;
+  border-radius: 100%;
+  border: 6px solid rgb(65, 76, 204);
+  position: absolute;
+  z-index: -1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: ring 1.5s infinite;
+}
+
+.button:hover::after, .button:focus::after {
+  animation: none;
+  display: none;
+}
+
+@keyframes ring {
+  0% {
+    width: 30px;
+    height: 30px;
+    opacity: 1;
+  }
+  100% {
+    width: 200px;
+    height: 200px;
+    opacity: 0;
+  }
+}
 
 .home_entImgs {
   flex-shrink: 0;
@@ -180,9 +259,27 @@ font-size: 50px;
   border-radius: 2.5625rem;
 }
 
+.home_mobile_RecntEvent {
+  display: none;
+}
+.home_desktop_RecntEvent {
+  color: #ffffff;
+  width: 100%;
+  text-align: center;
+  font-family: "Aboreto", cursive;
+  font-weight: bolder;
+  font-size: 2rem;
+  margin-top: 5%;
+  align-items: center;
+  justify-content: center;
+  justify-self: center;
+  display: flex;
+}
+
 .home_entInfo {
   width: 100%;
-  height: 35rem;
+  height: fit-content;
+  align-self: center;
   display: flex;
   border-radius: 1.5rem 0 0 1.5rem;
   background: #232325;
@@ -190,8 +287,8 @@ font-size: 50px;
 }
 
 .home_entInfo .quote {
-  width: 8rem;
-  height: 7rem;
+  width: 7rem;
+  height: 5rem;
   flex-direction: column;
   justify-content: flex-end;
   flex-shrink: 0;
@@ -200,7 +297,7 @@ font-size: 50px;
   & ::before {
     content: "\201C";
     color: #ffffff;
-    font-size: 10.5rem;
+    font-size: 9.5rem;
     margin: -3rem 0 0 -1rem;
 
     font-family: Georgia, "Times New Roman", Times, serif;
@@ -208,7 +305,7 @@ font-size: 50px;
 }
 .home_entInfo .text {
   width: 32rem;
-  margin: -1rem 1rem 2rem 5rem ;
+  margin: -1rem 1rem 2rem 5rem;
   color: #fff;
   padding: 0 1.5rem 1rem 0;
   font-family: Roboto;
@@ -248,6 +345,7 @@ font-size: 50px;
   align-items: center;
   overflow-wrap: unset;
   display: flex;
+  transition: 0.2s;
   flex-direction: column;
 }
 .cardImg {
@@ -274,14 +372,34 @@ font-size: 50px;
   display: flex;
   flex-direction: column;
   height: 249.7px;
+  transition: 0.2s
 }
-.IncardDiv:hover .underline {
-  animation: line 0.8s linear forwards;
+
+.underline {
+  position: absolute;
+  height: 3px;
+  background-color: #fff;
+  width: 40%;
+  display: flex;
+  display: block;
+  justify-self: center;
+  transition:width 0.4s
+
+}
+.underline1 {
+  padding: 0px 30px 0px 0px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+
+}
+.cardDiv:hover .underline {
+  /* animation: line 0.8s linear forwards; */
+  width: 80% ;
 }
 .cardDiv:hover {
   transform: scale(105%);
-  transition: 0.2s;
-
+  transition: 0.5s;
 }
 
 @keyframes line {
@@ -317,31 +435,81 @@ u {
 #name {
   margin-top: 2%;
 }
-.underline {
-  position: absolute;
-  height: 3px;
-  background-color: #fff;
-  width: 80%;
-}
-.underline1 {
-  padding: 0px 30px 0px 30px;
+
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700');
+
+a {
+	text-decoration: none;
 }
 
+.page {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100vw;
+	height: 100vh;
+	background-color: #e6f7f7;
+}
 
+.IncardDiv{
+  position: relative;
+  /* overflow: hidden; */
+  /* background-size: 100%; */
+	background-position: center;
+	/* box-shadow: 0px 0px 10px 2px rgba(#c5c5c5, 0.5); */
+	box-sizing: border-box;
 
+	transition: all 0.3s;
 
+  &:hover {
+		/* transform: translateY(20px); */
+		background-position: center 100%;
+		background-size: 105%;
+		box-shadow: 0px 0px 20px 0px rgba(#777777, 0.6);
 
+		.ccard__button {
+      display: block;
+			transform: translateY(80%);
+			color: #027090;
+			transition: all 0.3s;
+      
+		}
+	}
 
+}
 
-
+.ccard__button {
+	position: absolute;
+  z-index: -1;
+  display: flex;
+  flex-direction: column;
+	left: 0;
+	bottom: 0;
+	display: block;
+	width: 100%;
+	background-color: transparent;
+	box-sizing: border-box;
+	padding: 20px 10px;
+	font-size: 12px;
+	color: #fff;
+	font-weight: 300;
+	text-align: center;
+	text-transform: uppercase;
+	transform: translateY(-50%);
+	transition: all 0.3s;
+}
+.gitgggg{
+  width: 3rem;
+  height: 3rem;
+}
 
 
 /**********************************************Mobile********************************************************/
 @media only screen and (max-width: 550px) {
-  body{
+  body {
     overflow-x: hidden;
   }
-  
+
   .triangle-left {
     rotate: -1.26deg;
     left: -10rem;
@@ -351,14 +519,14 @@ u {
   .triangle-left svg {
     width: 15rem;
     height: 35rem;
-    
   }
- 
+
   .home_body {
     display: grid;
     /* margin: 0rem 0rem 1rem 2rem ; */
     margin: 0;
-    width: 100%;
+    /* width: 100%; */
+    overflow-x: hidden;
     grid-template-areas:
       "grid2"
       "grid1"
@@ -373,20 +541,32 @@ u {
   .home_grid2 {
     grid-area: grid2;
   }
-  
+
   .home_grid3 {
     grid-area: grid3;
+    color: #ffffff;
+    /* width: 100%; */
+    text-align: center;
+    font-family: "Aboreto", cursive;
+    font-weight: bolder;
+    font-size: 2rem;
+    margin-top: 5%;
+    align-items: center;
+    justify-content: center;
+    display: flex;
   }
   .home_grid4 {
     grid-area: grid4;
   }
- 
+
   .home_logo img {
-    margin-top: 0;
+    margin: 0;
     width: 15rem;
     height: 20rem;
+    justify-self: center;
+    transform: rotate3d(0);
   }
-  .home_h1{
+  .home_h1 {
     /* background-color: #fff; */
     display: flex;
     justify-content: center;
@@ -397,28 +577,28 @@ u {
     /* padding: 1rem; */
     font-size: 2.5rem;
   }
+  .home_mobile_RecntEvent .home_grid3 {
+  }
+  .home_desktop_RecntEvent {
+    display: none;
+  }
   .home_JoinUs h1 {
     font-size: 2rem;
   }
   .home_JoinUs p {
     font-size: 1rem;
   }
-  .home_JoinUs button {
-    width: 10rem;
-    height: 3rem;
-    border-radius: 1rem;
-    font-size: 1.5rem;
-  }
+
   .home_para {
     width: fit-content;
     margin-top: 1rem;
-    padding: 1rem 2rem 0rem 1rem;
+    padding: 1rem 1rem 0rem 1rem;
     /* background-color: #d60000; */
   }
   .home_para p {
     font-size: 1.2rem;
     line-height: 1.5rem;
-    text-align:justify;
+    text-align: justify;
     margin-top: 0;
   }
   .member-container2 {
@@ -430,12 +610,11 @@ u {
   .home_JoinUs {
     width: 100%;
     /* background-color: #c90e0e; */
-    display: flex;
-    margin-left: 2rem;
+    margin-left: 1rem;
     flex-wrap: wrap;
     flex-direction: column;
   }
-  .home_entImgs_container{
+  .home_entImgs_container {
     margin: 2rem;
   }
   .home_entImgs {
@@ -492,5 +671,4 @@ u {
   }
 }
 
-  /**************************************************** TAB View ***********************************************************/
-
+/**************************************************** TAB View ***********************************************************/
