--- a/src/sharing/LoginComponent.css
+++ b/src/sharing/LoginComponent.css
@@ -20,6 +20,21 @@
   align-items: flex-start;
   padding: 0 1.25rem 0rem 1.375rem;
 }
+
+.shake-animation {
+  color: red;
+  animation: shake 0.5s ease-in-out;
+}
+
+@keyframes shake {
+  0% { transform: translateX(0); }
+  25% { transform: translateX(-5px); }
+  50% { transform: translateX(5px); }
+  75% { transform: translateX(-3px); }
+  100% { transform: translateX(3px); }
+}
+
+
 .frame-child {
   height: 4.188rem;
   width: 29.563rem;
